--- a/general/achamanam.html
+++ b/general/achamanam.html
@@ -1,11 +1,7 @@
 <h2>ಆಚಮನಂ <span class="ENG">(Achamanam)</span></h2>
 
 <p>
-    For the first three verses, sip water and recite, ending with `svaha` for males and `namah` for females. Then, wash your hands.<br><br>
-
-    Only the lower lip should touch the palm.
-    Avoid making any slurping sound.
-    The person beside you should not notice you performing Achamanam.
+    First 3 verses, sip water and recite, ending with `svaha` (males) and `namah` (females). Then, wash your hands. Only lower lip should touch palm. No slurping sound.
 </p>
 
 <p>
