--- a/general/puja-end-prarthana.html
+++ b/general/puja-end-prarthana.html
@@ -10,19 +10,19 @@
         nyUnam sampUrnatAm yAti sadyO-vandE tamachyutam ||<br>
     </span>
 
-    ಮಂತ್ರಹೀನಂ ಕ್ರಿಯಾಹೀನಂ ಭಕ್ತಿಹೀನಂ ಗಣಾಧಿಪ |<br>
+    ಮಂತ್ರಹೀನಂ ಕ್ರಿಯಾಹೀನಂ ಭಕ್ತಿಹೀನಂ ________ |<br>
     <span class="ENG">
-        mantrahInaṃ kriyAhInaṃ bhaktihInaṃ gaṇAdhipa |<br>
+        mantrahInaṃ kriyAhInaṃ bhaktihInaṃ ________ |<br>
     </span>
 
-    ಯತ್ಪೂಜಿತಂ ಮಯಾ ದೇವ ಪರಿಪೂರ್ಣಂ ತದಸ್ತು ತೇ |<br>
+    ಯತ್ಪೂಜಿತಂ ಮಯಾ ________ ಪರಿಪೂರ್ಣಂ ತದಸ್ತು ತೇ |<br>
     <span class="ENG">
         yatpUjitaṃ mayA dEva paripUrṇaṃ tadastu tE ||<br>
     </span>
 
-    ಅನಯಾ ಯಥಾಶಕ್ತಿ ಪೂಜಯಾ ಚ ________ ________<br>
+    ಅನಯಾ ಯಥಾಶಕ್ತಿ ಪೂಜಯಾ ಚ ________ ಸರ್ವಾತ್ಮಕಃ<br>
     <span class="ENG">
-        AnayA yathAshakti pUjayA cha ________ ________<br>
+        AnayA yathAshakti pUjayA cha ________ sarvaatmika:<br>
     </span>
 
     ________ ದೇವತಾ ಸುಪ್ರಸನ್ನಃ ಸುಪ್ರೀತೋ ವರದೋ ಭವತು<br>
