--- a/general/swasti.html
+++ b/general/swasti.html
@@ -1,8 +1,7 @@
-
 <h2>ಶಾಂತಿ ಮಂತ್ರ <span class="ENG">(Shanti Mantra)</span></h2>
 
 <p>
-    This is the time to do your prayers and make your requests.
+    Do you main Prarthana at this stage.
 </p>
 
 <p>
