--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
                     <li><a href="puja/venkateswara-puja.html">Venkateswara Puja</a></li>
                     <li><a href="stotram/venkateswara-vajra-kavacham.html">Venkateswara vajra kavacham</a></li>
                     <li><a href="stotram/garuda-gamana-stotram.html">Garuda Gamana Stotram</a></li>
-                    <li><a href="stotram/vishnu-sahasranamam.html">Vishnu Sahasranamam</a></li>
+                    <li><a href="stotram/vishnu-sahasranamam.html">Vishnu Sahasranamam (in progress)</a></li>
                 </ol>
             </div>
 
@@ -44,7 +44,7 @@
                     </li>
                     <li> <a href="puja/vyuha-lakshmi-tantra.html">Vyuha Lakshmi Tantra</a> </li>
                     <li> <a href="stotram/lakshmi-ashtakam.html">Lakshmi Ashtakam</a> </li>
-                    <li> <a href="stotram/kanakadhara-stotram.html">Kanakadara Stotram</a> </li>
+                    <li> <a href="stotram/kanakadhara-stotram.html">Kanakadara Stotram (in progress)</a> </li>
                     <li> <a href="stotram/lakshmi-ashtottara-satanaama-stotram.html">Lakshmi Ashtottara Satanaama
                             Stotram</a> </li>
                 </ol>
