--- a/puja/TEMPLATE-PUJA.html
+++ b/puja/TEMPLATE-PUJA.html
@@ -1,11 +1,12 @@
 <!DOCTYPE html>
 <html lang="kn">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>TEMPLATE_TITLE_LANG (TEMPLATE_TITLE_ENG)</title>
     <link rel="icon" type="image/x-icon" href="../favicon.ico">
-    
+
     <!-- Centralized Styles -->
     <link rel="stylesheet" href="../styles/common.css">
 </head>
@@ -36,9 +37,9 @@
     <div id="sankalpam"></div>
 
     <b>
-        ಶ್ರೀ TEMPLATE-DEVATA ದೇವತಾಂ ಉದ್ದಿಶ್ಯ ಯಾವಚ್ಛಕ್ತಿ ಪೂಜಾಂ ಕರಿಷ್ಯೇ<br>
+        ಶ್ರೀ <u>TEMPLATE-DEVATA</u> ದೇವತಾಂ ಉದ್ದಿಶ್ಯ ಯಾವಚ್ಛಕ್ತಿ ಪೂಜಾಂ ಕರಿಷ್ಯೇ<br>
         <span class="ENG">
-            Sree TEMPLATE-DEVATA daevataaM uddiSya yaavaChchakti poojaaM karishyae
+            Sree <u>TEMPLATE-DEVATA</u> daevataaM uddiSya yaavaChchakti poojaaM karishyae
         </span>
     </b>
 
@@ -49,16 +50,24 @@
     <div id="chaamaram"></div>
     <div id="puja-end-prarthana"></div>
     <b>
-        ಪೂಜಯಾ ಚ ಭಗವಾನ್ ಸರ್ವಾತ್ಮಕಃ --OR--
-        ಪೂಜಯಾ ಚ ಭಗವತೀ ಸರ್ವಾತ್ಮಕಃ<br>
+        ಮಂತ್ರಹೀನಂ ಕ್ರಿಯಾಹೀನಂ ಭಕ್ತಿಹೀನಂ <u>ಗಣಾಧಿಪ</u> or <u>ಸದಾಶಿವಾ</u> or <u>ಜನಾರ್ದಿನಿ</u> or <u>ಜನಾರ್ದಿನ</u> | <br>
         <span class="ENG">
-            pūjayā ca bhagavān sarvātmakaḥ --OR--
-            pūjayā ca bhagavatee sarvaatmika:<br><br>
+            mantrahInaṃ kriyAhInaṃ bhaktihInaṃ <u>gaṇAdhipa</u> or <u>saDAsivA</u> or <u>jaanArdini</u> or <u>jaanArdana</u> |<br>
         </span>
 
-        ಶ್ರೀ TEMPLATE-DEVATA ದೇವತಾ<br>
+        ಯತ್ಪೂಜಿತಂ ಮಯಾ <u>ದೇವ</u> or <u>ದೇವಿ</u> ಪರಿಪೂರ್ಣಂ ತದಸ್ತು ತೇ |<br>
         <span class="ENG">
-            Śrī TEMPLATE-DEVATA devatā
+            yatpUjitaṃ mayA <u>Deva</u> or <u>Devi</u> paripUrṇaṃ tadastu tE ||<br>
+        </span>
+
+        ಅನಯಾ ಯಥಾಶಕ್ತಿ ಪೂಜಯಾ ಚ <u>ಭಗವಾನ್</u> or <u>ಭಗವತೀ</u> <u>ಸರ್ವಾತ್ಮಕಃ</u> or <u>ಸರ್ವಾತ್ಮಿಕಾಃ</u> |<br>
+        <span class="ENG">
+            AnayA yathAshakti pUjayA cha <u>bhagavān</u> or <u>bhagavatee</u> <u>sarvaatmakah:</u> or <u>sarvaatmikah:</u> |<br>
+        </span>
+
+        ಶ್ರೀ <u>TEMPLATE-DEVATA</u> ದೇವತಾ ಸುಪ್ರಸನ್ನಃ ಸುಪ್ರೀತೋ ವರದೋ ಭವತು ||<br>
+        <span class="ENG">
+            Śrī <u>TEMPLATE-DEVATA</u> devatA suprasannaH suprEtO varadO bhavatu ||<br>
         </span>
     </b>
     <div id="swasti"></div>
