--- a/puja/hanumaan-puja.html
+++ b/puja/hanumaan-puja.html
@@ -149,14 +149,24 @@
     <div id="chaamaram"></div>
     <div id="puja-end-prarthana"></div>
     <b>
-        ಪೂಜಯಾ ಚ ಭಗವಾನ್ ಸರ್ವಾತ್ಮಕಃ<br>
+        ಮಂತ್ರಹೀನಂ ಕ್ರಿಯಾಹೀನಂ ಭಕ್ತಿಹೀನಂ <u>ಕಪೀಹ್ವಾರ</u> | <br>
         <span class="ENG">
-            pūjayā ca bhagavān sarvātmakaḥ<br><br>
+            mantrahInaṃ kriyAhInaṃ bhaktihInaṃ <u>kapeeSvara</u> |<br>
         </span>
 
-        ಶ್ರೀ ಆಂಜನೇಯ ದೇವತಾ<br>
+        ಯತ್ಪೂಜಿತಂ ಮಯಾ <u>ದೇವ</u> ಪರಿಪೂರ್ಣಂ ತದಸ್ತು ತೇ |<br>
         <span class="ENG">
-            Sree aaMjanaeya daevataa
+            yatpUjitaṃ mayA <u>Deva</u> paripUrṇaṃ tadastu tE |<br>
+        </span>
+    
+        ಅನಯಾ ಯಥಾಶಕ್ತಿ ಪೂಜಯಾ ಚ <u>ಭಗವಾನ್</u> <u>ಸರ್ವಾತ್ಮಕಃ</u> |<br>
+        <span class="ENG">
+            AnayA yathAshakti pUjayA cha <u>bhagavaan</u> <u>sarvaatmaka:</u> |<br>
+        </span>
+
+        ಶ್ರೀ <u>ಆಂಜನೇಯ</u> ದೇವತಾ ಸುಪ್ರಸನ್ನಃ ಸುಪ್ರೀತೋ ವರದೋ ಭವತು ||<br>
+        <span class="ENG">
+            Śrī <u>aaMjanaeya</u> devatA suprasannaH suprEtO varadO bhavatu ||
         </span>
     </b>
     <div id="swasti"></div>
