--- a/puja/lakshmi-puja.html
+++ b/puja/lakshmi-puja.html
@@ -1,11 +1,12 @@
 <!DOCTYPE html>
 <html lang="kn">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>ಲಕ್ಷ್ಮಿ ಪೂಜೆ (Lakshmi Puja)</title>
     <link rel="icon" type="image/x-icon" href="../favicon.ico">
-    
+
     <!-- Centralized Styles -->
     <link rel="stylesheet" href="../styles/common.css">
 </head>
@@ -140,7 +141,8 @@
         <span class="ENG">daevee preetikaraM chaiva mama saukhyaM vivardhaya<br></span>
 
         ಸಂತತ ಶ್ರೀರಸ್ತು ಸಮಸ್ತ ಮಂಗಳಾನಿ ಭವಂತು ನಿತ್ಯ ಶ್ರೀರಸ್ತು ನಿತ್ಯಮಂಗಳಾನಿ ಭವಂತು<br>
-        <span class="ENG">saMtata Sreerastu samasta maMgaLaani bhavaMtu nitya Sreerastu nityamaMgaLaani bhavaMtu<br></span>
+        <span class="ENG">saMtata Sreerastu samasta maMgaLaani bhavaMtu nitya Sreerastu nityamaMgaLaani
+            bhavaMtu<br></span>
 
         ಶ್ರೀ ಮಹಾಲಕ್ಷ್ಮೀ ದೇವ್ಯೈ ನಮಃ ಕರ್ಪೂರ ನೀರಾಜನಂ ಸಮರ್ಪಯಾಮಿ<br>
         <span class="ENG">Sree mahaalakshmee daevyai nama: karpoora neeraajanaM samarpayaami<br></span>
@@ -159,14 +161,24 @@
     <div id="chaamaram"></div>
     <div id="puja-end-prarthana"></div>
     <b>
-        ಪೂಜಯಾ ಚ ಭಗವತೀ ಸರ್ವಾತ್ಮಕಃ<br>
+        ಮಂತ್ರಹೀನಂ ಕ್ರಿಯಾಹೀನಂ ಭಕ್ತಿಹೀನಂ <u>ಜನಾರ್ದಿನಿ</u> | <br>
         <span class="ENG">
-            pūjayā ca bhagavatee sarvaatmika:<br><br>
+            mantrahInaṃ kriyAhInaṃ bhaktihInaṃ <u>jaanArdini</u> |<br>
         </span>
 
-        ಶ್ರೀ ಮಹಾಲಕ್ಷ್ಮೀ ದೇವತಾ<br>
+        ಯತ್ಪೂಜಿತಂ ಮಯಾ <u>ದೇವಿ</u> ಪರಿಪೂರ್ಣಂ ತದಸ್ತು ತೇ |<br>
         <span class="ENG">
-            śrī mahālakṣmī devatā
+            yatpUjitaṃ mayA <u>Devi</u> paripUrṇaṃ tadastu tE |<br>
+        </span>
+
+        ಅನಯಾ ಯಥಾಶಕ್ತಿ ಪೂಜಯಾ ಚ <u>ಭಗವತೀ</u> <u>ಸರ್ವಾತ್ಮಿಕಾಃ</u> |<br>
+        <span class="ENG">
+            AnayA yathAshakti pUjayA cha <u>bhagavatee</u> <u>sarvaatmikah:</u> |<br>
+        </span>
+
+        ಶ್ರೀ <u>ಮಹಾಲಕ್ಷ್ಮೀ</u> ದೇವತಾ ಸುಪ್ರಸನ್ನಃ ಸುಪ್ರೀತೋ ವರದೋ ಭವತು ||<br>
+        <span class="ENG">
+            Śrī <u>mahālakṣmī</u> devatA suprasannaH suprEtO varadO bhavatu ||<br>
         </span>
     </b>
     <div id="swasti"></div>
@@ -174,4 +186,5 @@
     <!-- Centralized Scripts -->
     <script src="../scripts/common.js"></script>
 </body>
+
 </html>
