--- a/puja/shiva-abhishekam.html
+++ b/puja/shiva-abhishekam.html
@@ -229,19 +229,24 @@
     <div id="chaamaram"></div>
     <div id="puja-end-prarthana"></div>
     <b>
-        ಮಂತ್ರಹೀನಂ ಕ್ರಿಯಾಹೀನಂ ಭಕ್ತಿಹೀನಂ ಸದಾಶಿವಾ<br>
+        ಮಂತ್ರಹೀನಂ ಕ್ರಿಯಾಹೀನಂ ಭಕ್ತಿಹೀನಂ <u>ಸದಾಶಿವಾ</u> | <br>
         <span class="ENG">
-            mantrahInaṃ kriyAhInaṃ bhaktihInaṃ sadaaSiva<br><br>
+            mantrahInaṃ kriyAhInaṃ bhaktihInaṃ <u>sadaaSiva</u> |<br>
         </span>
 
-        ಅನಯಾ ಯಥಾಶಕ್ತಿ ಪೂಜಯಾ ಚ ಪೂಜಯಾ ಚ ಭಗವಾನ್ ಸರ್ವಾತ್ಮಕಃ<br>
+        ಯತ್ಪೂಜಿತಂ ಮಯಾ <u>ದೇವ</u> ಪರಿಪೂರ್ಣಂ ತದಸ್ತು ತೇ |<br>
         <span class="ENG">
-            AnayA yathAshakti pUjayA cha bhagavān sarvātmakaḥ<br><br>
+            yatpUjitaṃ mayA <u>Deva</u> paripUrṇaṃ tadastu tE |<br>
+        </span>
+    
+        ಅನಯಾ ಯಥಾಶಕ್ತಿ ಪೂಜಯಾ ಚ <u>ಭಗವಾನ್</u> <u>ಸರ್ವಾತ್ಮಕಃ</u> |<br>
+        <span class="ENG">
+            AnayA yathAshakti pUjayA cha <u>bhagavaan</u> <u>sarvaatmaka:</u> |<br>
         </span>
 
-        ಶ್ರೀ ಉಮಾಮಹೇಶ್ವರ ದೇವತಾ ಸುಪ್ರಸನ್ನಃ ಸುಪ್ರೀತೋ ವರದೋ ಭವತು<br>
+        ಶ್ರೀ <u>ಉಮಾಮಹೇಶ್ವರ</u> ದೇವತಾ ಸುಪ್ರಸನ್ನಃ ಸುಪ್ರೀತೋ ವರದೋ ಭವತು ||<br>
         <span class="ENG">
-            Śrī uma-maheshwara devatA suprasannaH suprEtO varadO bhavatu
+            Śrī <u>uma-maheshwara</u> devatA suprasannaH suprEtO varadO bhavatu ||<br>
         </span>
     </b>
     <div id="swasti"></div>
