--- a/general/kuladevata-prarthana.html
+++ b/general/kuladevata-prarthana.html
@@ -1,6 +1,4 @@
-<h2>ಕುಲದೇವ ಪ್ರಾರ್ಥನ<span class="ENG">(Kuladeva Prarthana)</span></h2>
-
-<audio controls="controls" src="../audio/veerabhadra-dhyana-sloka.mp3"></audio>
+<h2>ಕುಲದೇವ ಪ್ರಾರ್ಥನ <span class="ENG">(Kuladeva Prarthana)</span><audio controls="controls" src="../audio/veerabhadra-dhyana-sloka.mp3"></audio></h2>
 
 <p>
     <b>ಷಣ್ನೆತ್ರಾಂ</b> ತ್ರಿಮುಖಂ ಭೀಮಂ ಕಾಲಮೇಘ ಸಮಪ್ರ<b>ಭಾಂ</b> <br>
