--- a/puja/ganapati-puja.html
+++ b/puja/ganapati-puja.html
@@ -200,14 +200,24 @@
     <div id="chaamaram"></div>
     <div id="puja-end-prarthana"></div>
     <b>
-        ಪೂಜಯಾ ಚ ಭಗವಾನ್ ಸರ್ವಾತ್ಮಕಃ<br>
+        ಮಂತ್ರಹೀನಂ ಕ್ರಿಯಾಹೀನಂ ಭಕ್ತಿಹೀನಂ <u>ಗಣಾಧಿಪ</u> | <br>
         <span class="ENG">
-            pūjayā ca bhagavān sarvātmakaḥ<br><br>
+            mantrahInaṃ kriyAhInaṃ bhaktihInaṃ <u>gaṇAdhipa</u> |<br>
         </span>
-        
-        ಶ್ರೀ ಮಹಾಗಣಾಧಿಪತಿ ದೇವತಾ<br>
+
+        ಯತ್ಪೂಜಿತಂ ಮಯಾ <u>ದೇವ</u> ಪರಿಪೂರ್ಣಂ ತದಸ್ತು ತೇ |<br>
         <span class="ENG">
-            Śrī mahāgaṇādhipati devatā
+            yatpUjitaṃ mayA <u>Deva</u> paripUrṇaṃ tadastu tE |<br>
+        </span>
+
+        ಅನಯಾ ಯಥಾಶಕ್ತಿ ಪೂಜಯಾ ಚ <u>ಭಗವಾನ್</u> <u>ಸರ್ವಾತ್ಮಕಃ</u> | <br>
+        <span class="ENG">
+            AnayA yathAshakti pUjayA cha <u>bhagavān</u> <u>sarvaatmakah:</u> |<br>
+        </span>
+
+        ಶ್ರೀ <u>ಮಹಾಗಣಾಧಿಪತಿ</u> ದೇವತಾ ಸುಪ್ರಸನ್ನಃ ಸುಪ್ರೀತೋ ವರದೋ ಭವತು<br>
+        <span class="ENG">
+            Śrī <u>mahāgaṇādhipati-DEVATA</u> devatA suprasannaH suprEtO varadO bhavatu ||<br>
         </span>
     </b>
     <div id="swasti"></div>
