--- a/puja/veerabhadra-puja.html
+++ b/puja/veerabhadra-puja.html
@@ -471,14 +471,24 @@
 
     <div id="puja-end-prarthana"></div>
     <b>
-        ಪೂಜಯಾ ಚ ಭಗವಾನ್ ಸರ್ವಾತ್ಮಕಃ <br>
+        ಮಂತ್ರಹೀನಂ ಕ್ರಿಯಾಹೀನಂ ಭಕ್ತಿಹೀನಂ <u>ವೀರಭದ್ರ</u> | <br>
         <span class="ENG">
-            pūjayā ca bhagavān sarvātmakaḥ <br> <br>
+            mantrahInaṃ kriyAhInaṃ bhaktihInaṃ <u>Veerabhadra</u> |<br>
         </span>
 
-        ಶ್ರೀ  ಭದ್ರಕಾಲೀಸಹಿತ ವೀರಭದ್ರಸ್ವಾಮಿ ದೇವತಾ <br>
+        ಯತ್ಪೂಜಿತಂ ಮಯಾ <u>ದೇವ</u> ಪರಿಪೂರ್ಣಂ ತದಸ್ತು ತೇ |<br>
         <span class="ENG">
-            Śrī Bhadrakali sahita Veerabhadraswamy devatā
+            yatpUjitaṃ mayA <u>Deva</u> paripUrṇaṃ tadastu tE |<br>
+        </span>
+
+        ಅನಯಾ ಯಥಾಶಕ್ತಿ ಪೂಜಯಾ ಚ <u>ಭಗವಾನ್</u> <u>ಸರ್ವಾತ್ಮಕಃ</u> |<br>
+        <span class="ENG">
+            AnayA yathAshakti pUjayA cha <u>bhagavaan</u> <u>sarvaatmaka:</u> |<br>
+        </span>
+
+        ಶ್ರೀ <u>ಭದ್ರಕಾಲೀಸಹಿತ ವೀರಭದ್ರಸ್ವಾಮಿ</u> ದೇವತಾ ಸುಪ್ರಸನ್ನಃ ಸುಪ್ರೀತೋ ವರದೋ ಭವತು ||<br>
+        <span class="ENG">
+            Śrī <u>Bhadrakali sahita Veerabhadraswamy</u> devatA suprasannaH suprEtO varadO bhavatu || <br>
         </span>
     </b>
 
