--- a/puja/venkateswara-puja.html
+++ b/puja/venkateswara-puja.html
@@ -208,16 +208,24 @@
     <div id="chaamaram"></div>
     <div id="puja-end-prarthana"></div>
     <b>
-        ಪೂಜಯಾ ಚ ಭಗವಾನ್ ಸರ್ವಾತ್ಮಕಃ<br>
+        ಮಂತ್ರಹೀನಂ ಕ್ರಿಯಾಹೀನಂ ಭಕ್ತಿಹೀನಂ <u>ಜನಾರ್ದಿನ</u> | <br>
         <span class="ENG">
-            pūjayā ca bhagavān sarvātmakaḥ<br><br>
+            mantrahInaṃ kriyAhInaṃ bhaktihInaṃ <u>jaanArdana</u> |<br>
         </span>
 
-        ಅಲಮೇಲುಮಂಗಾ ಪದ್ಮಾವತೀ ಸಮೇತ<br>&emsp;
-        ಶ್ರೀ ವೆಂಕಟೇಶ್ವರಸ್ವಾಮಿ ದೇವತಾ<br>
+        ಯತ್ಪೂಜಿತಂ ಮಯಾ <u>ದೇವ</u> ಪರಿಪೂರ್ಣಂ ತದಸ್ತು ತೇ |<br>
         <span class="ENG">
-            AlamaelumaMgaa padmaavatee samaeta<br>&emsp;
-        Sree vaeMkaTaeSvaraswaami daevataa
+            yatpUjitaṃ mayA <u>Deva</u> paripUrṇaṃ tadastu tE |<br>
+        </span>
+    
+        ಅನಯಾ ಯಥಾಶಕ್ತಿ ಪೂಜಯಾ ಚ <u>ಭಗವಾನ್</u> <u>ಸರ್ವಾತ್ಮಕಃ</u> |<br>
+        <span class="ENG">
+            AnayA yathAshakti pUjayA cha <u>bhagavaan</u> <u>sarvaatmaka:</u> |<br>
+        </span>
+
+        ಶ್ರೀ <u>ಅಲಮೇಲುಮಂಗಾ ಪದ್ಮಾವತೀ ಸಮೇತ<br>&emsp;ಶ್ರೀ ವೆಂಕಟೇಶ್ವರಸ್ವಾಮಿ</u> ದೇವತಾ ಸುಪ್ರಸನ್ನಃ ಸುಪ್ರೀತೋ ವರದೋ ಭವತು ||<br>
+        <span class="ENG">Śrī <u>
+            AlamaelumaMgaa padmaavatee samaeta<br>&emsp;Sree vaeMkaTaeSvaraswaami</u> devatA suprasannaH suprEtO varadO bhavatu ||<br>
         </span>
     </b>
     <div id="swasti"></div>
