--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
     <hr>
     <ol>
         <li>
-            <a href="puja/TEMPLATE-PUJA.html">Template for new pujas</a>
+            <a href="templates/puja-template.html">Template for new pujas</a>
         </li>
     </ol>
 </body>
