--- a/puja/shiva-abhishekam.html
+++ b/puja/shiva-abhishekam.html
@@ -10,10 +10,10 @@
     <link rel="stylesheet" href="../styles/common.css">
 </head>
 
-<h1>
+<body>
     <h1>ಶಿವ ಅಭಿಷೇಕಂ <span class="ENG">(Shiva Abhishekam)</span></h1>
 
-    <button onclick="toggleVisibility()">Show/Hide English Transliteration</button>
+    <button class="toggle-btn" onclick="toggleVisibility()">Show/Hide English Transliteration</button>
 
     <div id="shuddikarana-mantra"></div>
     <div id="ganapati-prarthana"></div>
@@ -42,7 +42,7 @@
         </span>
     </b>
 
-    <h2>ಧ್ಯಾನಂ<span class="ENG">Dhyaanam</span></h1>
+    <h2>ಧ್ಯಾನಂ<span class="ENG">Dhyaanam</span></h2>
 
     <p>
         Place right hand on the lingam, close your eyes while doing dyaanam.
