--- a/puja/venkateswara-puja.html
+++ b/puja/venkateswara-puja.html
@@ -13,7 +13,7 @@
 <body>
     <h1>ವೆಂಕಟೇಶ್ವರ ಪೂಜ <span class="ENG">(Venkateswara Pooja)</span></h1>
 
-    <button onclick="toggleVisibility()">Show/Hide English Transliteration</button>
+    <button class="toggle-btn" onclick="toggleVisibility()">Show/Hide English Transliteration</button>
 
     <div id="shuddikarana-mantra"></div>
     <div id="ganapati-prarthana"></div>
