--- a/puja/vyuha-lakshmi-tantra.html
+++ b/puja/vyuha-lakshmi-tantra.html
@@ -13,7 +13,7 @@
 <body>
     <h1>ವ್ಯೂಹಲಕ್ಷ್ಮೀ ತಂತ್ರಃ <span class="ENG">(Vyuha Lakshmi Tantram)</span></h1>
 
-    <button onclick="toggleVisibility()">Show/Hide English Transliteration</button>
+    <button class="toggle-btn" onclick="toggleVisibility()">Show/Hide English Transliteration</button>
 
     <h1>ವ್ಯೂಹಲಕ್ಷ್ಮೀ ತಂತ್ರಃ (PART 1/3 - 1 time)</h1>
     <p>
