--- a/stotram/argala-stotram.html
+++ b/stotram/argala-stotram.html
@@ -73,19 +73,8 @@
         <li>Thank the Goddess and release your intention.</li>
     </ul>
 
+    <!-- Centralized Scripts -->
+    <script src="../scripts/common.js"></script>
 </body>
-
-<script>
-    function toggleVisibility() {
-        var elements = document.querySelectorAll('.ENG');
-        elements.forEach(function (element) {
-            if (element.style.display === 'none') {
-                element.style.display = 'inline';
-            } else {
-                element.style.display = 'none';
-            }
-        });
-    }
-</script>
 
 </html>
