--- a/stotram/ganpati-sankata-nashana-stotram.html
+++ b/stotram/ganpati-sankata-nashana-stotram.html
@@ -12,7 +12,7 @@
 
 <body>
 
-    <button onclick="toggleVisibility()">Show/Hide English Transliteration</button>
+    <button class="toggle-btn" onclick="toggleVisibility()">Show/Hide English Transliteration</button>
 
     <h1>
         ಸಂಕಟ ನಾಶನ ಸ್ತೋತ್ರಂ <span class="ENG">(Sankata Nashana Stotram)</span>
