--- a/stotram/lakshmi-ashtottara-satanaama-stotram.html
+++ b/stotram/lakshmi-ashtottara-satanaama-stotram.html
@@ -11,7 +11,7 @@
 </head>
 
 <body>
-    <button onclick="toggleVisibility()">Show/Hide English Transliteration</button>
+    <button class="toggle-btn" onclick="toggleVisibility()">Show/Hide English Transliteration</button>
 
     <h1>ಲಕ್ಷ್ಮಿ ಅಷ್ಟೋತ್ತರ ಶತನಾಮ ಸ್ತೋತ್ರಂ <span class="ENG">(Lakshmi Ashtottara Satanaama Stotram)</span></h1>
 
