--- a/stotram/lakshmi-chaturvimsati-stotram.html
+++ b/stotram/lakshmi-chaturvimsati-stotram.html
@@ -11,7 +11,7 @@
 </head>
 
 <body>
-    <button onclick="toggleVisibility()">Show/Hide English Transliteration</button>
+    <button class="toggle-btn" onclick="toggleVisibility()">Show/Hide English Transliteration</button>
 
     <h1>ಶ್ರೀ ಮಹಾಲಕ್ಷ್ಮೀ ಚತುರ್ವಿಂಶತಿನಾಮ ಸ್ತೋತ್ರಂ<span class="ENG">Shri Mahalakshmi Chaturvimsati Stotram</span></h1>
 
