--- a/stotram/pitru-devata-stotram.html
+++ b/stotram/pitru-devata-stotram.html
@@ -13,7 +13,7 @@
 <body>
     <h1>ಪಿತೃ ದೇವತಾ ಸ್ತೋತ್ರಂ <span class="ENG">(Pitru Devata Stotram)</span></h1>
 
-    <button onclick="toggleVisibility()">Show/Hide English Transliteration</button>
+    <button class="toggle-btn" onclick="toggleVisibility()">Show/Hide English Transliteration</button>
 
     <p>
         ನಮಃ ಪಿತ್ರೇ ಜನ್ಮದಾತ್ರೇ ಸರ್ವದೇವಮಯಾಯ ಚ |<br>
