--- a/stotram/saraswati-kavacham.html
+++ b/stotram/saraswati-kavacham.html
@@ -11,7 +11,7 @@
 </head>
 
 <body>
-    <button onclick="toggleVisibility()">Show/Hide English Transliteration</button>
+    <button class="toggle-btn" onclick="toggleVisibility()">Show/Hide English Transliteration</button>
 
     <h1>
         ಸರಸ್ವತೀ ಕವಚಂ
