--- a/stotram/soundarya-lahari.html
+++ b/stotram/soundarya-lahari.html
@@ -13,7 +13,7 @@
 <body>
     <h1>ಸೌಂದರ್ಯ ಲಹರಿ <span class="ENG">(Soundarya Lahari)</span></h1>
 
-    <button onclick="toggleVisibility()">Show/Hide English Transliteration</button>
+    <button class="toggle-btn" onclick="toggleVisibility()">Show/Hide English Transliteration</button>
 
     <h3>15 → ಸರ್ವ ಶುಕ್ಲಾ ಸರಸ್ವತಿ <span class="ENG">(Sarva Shukla Saraswati)</span></h3>
     <p>
