--- a/stotram/venkateswara-vajra-kavacham.html
+++ b/stotram/venkateswara-vajra-kavacham.html
@@ -11,7 +11,7 @@
 </head>
 
 <body>
-    <button onclick="toggleVisibility()">Show/Hide English Transliteration</button>
+    <button class="toggle-btn" onclick="toggleVisibility()">Show/Hide English Transliteration</button>
 
     <h1>ವೆಂಕಟೇಶ್ವರ ವಜ್ರ ಕವಚ <span class="ENG">(Venkateswara vajra kavacham)</span></h1>
     <p>
