--- a/puja/lakshmi-puja.html
+++ b/puja/lakshmi-puja.html
@@ -14,7 +14,7 @@
 <body>
     <h1>ಲಕ್ಷ್ಮಿ ಪೂಜೆ <span class="ENG">(Lakshmi Puja)</span></h1>
 
-    <button onclick="toggleVisibility()">Show/Hide English Transliteration</button>
+    <button class="toggle-btn" onclick="toggleVisibility()">Show/Hide English Transliteration</button>
 
     <div id="shuddikarana-mantra"></div>
     <div id="ganapati-prarthana"></div>
