--- a/puja/veerabhadra-puja.html
+++ b/puja/veerabhadra-puja.html
@@ -13,7 +13,7 @@
 <body>
     <h1>ಶ್ರೀ ವೀರಭದ್ರ ನಿತ್ಯ ಪೂಜಾ ವಿಧಾನಮ್ <span class="ENG">(Shri Veerabhadra Nitya Puja Vidhanam)</span></h1>
 
-    <button onclick="toggleVisibility()">Show/Hide English Transliteration</button>
+    <button class="toggle-btn" onclick="toggleVisibility()">Show/Hide English Transliteration</button>
 
     <div id="shuddikarana-mantra"></div>
     <div id="ganapati-prarthana"></div>
