--- a/index.html
+++ b/index.html
@@ -108,7 +108,10 @@
     <hr>
     <ol>
         <li>
-            <a href="templates/puja-template.html">Template for new pujas</a>
+            <a href="puja/puja-template.html">Template for new pujas</a>
+        </li>
+        <li>
+            <a href="stotram/stotram-template.html">Template for new stotrams</a>
         </li>
     </ol>
 </body>
