--- a/stotram/saraswati-kavacham.html
+++ b/stotram/saraswati-kavacham.html
@@ -13,12 +13,8 @@
 <body>
     <button class="toggle-btn" onclick="toggleVisibility()">Show/Hide English Transliteration</button>
 
-    <h1>
-        ಸರಸ್ವತೀ ಕವಚಂ
-        <span class="ENG">
-            (Saraswati Kavacham)
-        </span>
-    </h1>
+    <h1>ಸರಸ್ವತೀ ಕವಚಂ<span class="ENG">(Saraswati Kavacham)</span></h1>
+
     <p>
         ಓಂ ಶ್ರೀಂ ಹ್ರೀಂ ಸರಸ್ವತ್ಯೈ ಸ್ವಾಹಾ ಶಿರೋ ಮೇ ಪಾತು ಸರ್ವತಃ |<br>
         ಶ್ರೀಂ (ವಾಗ್-ದೇವತಾಯೈ) <b>ವಾಗ್ದೇವತಾಯೈ</b> ಸ್ವಾಹಾ ಫಾಲಂ ಮೇ ಸರ್ವದಾಽವತು || ೧ ||<br><br>
@@ -60,9 +56,9 @@
         ಓಂ ಗ್ರಂಥಬೀಜಸ್ವರೂಪಾಯೈ ಸ್ವಾಹಾ ಮಾಂ ಸರ್ವತೋಽವತು || ೧೩ ||
     </p>
     
-    <h1>
+    <h2>
         Renditions of Saraswati Kavacham
-    </h1>
+    </h2>
     <ol>
         <li><a href="https://youtu.be/riF-W6cW8Vk?si=El7IyQ_PkRQ0NsPs&t=256">Musical</a></li>
         <li><a href="https://youtu.be/q8czyMJzLqA?si=cI-6J1vDD9A3dFl0&t=26">Hand movement</a></li>
