--- a/index.html
+++ b/index.html
@@ -35,6 +35,7 @@
                 <h2>Lakshmi</h2>
                 <ol>
                     <li> <a href="puja/lakshmi-puja.html">Lakshmi Puja</a> </li>
+                    <li> <a href="puja/vara-maha-lakshmi-puja.html">Vara Maha Lakshmi Puja</a> </li>
                     <li>
                         <a href="puja/lakshmi-chaturvimsati.html">Lakshmi Chaturvimsati</a><br>
                         (
