More fixes vara maha lakshmi vratam

--- a/puja/vara-maha-lakshmi-puja.html
+++ b/puja/vara-maha-lakshmi-puja.html
@@ -57,33 +57,35 @@
         <span class="ENG">kuru ghaṇṭāravaṃ tatra devatāhvāna laañchanam ||<br></span>
     </p>
 
-    <h2>ಕಲಶಾರಾಧನ<span class="ENG">(kalaSaaraadhana)</span></h2>
+    <h2>
+        ಕಲಶಾರಾಧನ <span class="ENG">(Kalasha Arādhana)</span>
+    </h2>
     <p>
-        ಕಲಶಸ್ಯ ಮುಖೇ ವಿಷ್ಣುಃ ಕಂಠೇ ರುದ್ರಃ ಸಮಾಶ್ರಿತಾಃ |<br>
-        <span class="ENG">kalashasya mukhe vishnuh kanthe rudrah samaashritah<br></span>
+        ಕಲಶಸ್ಯ ಮುಖೇ ವಿಷ್ಣುಃ ಕಂಠೇ ರುದ್ರಸ್ಸಮಾಶ್ರಿತಃ <br>
+        <span class="ENG">kalashasya mukhe viṣṇuḥ kaṇṭhe rudraḥ samāśritaḥ<br></span>
 
-        ಮೂಲೇ ತಸ್ಯ ಸ್ಥಿತೋ ಬ್ರಹ್ಮಾ ಮಧ್ಯೇ ಮಾತೃಗಣಾಃ ಸ್ಮೃತಾಃ |<br>
-        <span class="ENG">moole tasya sthito brahmaa madhye maatru-gaNaa smrutaaH<br></span>
+        ಮೂಲೇ ತತ್ರ ಸ್ಥಿತೋ ಬ್ರಹ್ಮಾ ಮಧ್ಯೆ ಮಾತೃಗಣಾಃ ಸ್ಮೃತಾಃ <br>
+        <span class="ENG">mūle tatra sthito brahmā madhye mātr̥gaṇāḥ smṛtāḥ<br></span>
 
-        ಕುಕ್ಷೌ ತು ಸಾಗರಾಃ ಸರ್ವೇ ಸಪ್ತದ್ವೀಪಾ ವಸುಂಧರಾಃ |<br>
-        <span class="ENG">kukshau tu saagaraah sarve saptadveepaa vasundharaah<br></span>
+        ಕುಕ್ಷೌ ತು ಸಾಗರಾಃ ಸರ್ವೇ ಸಪ್ತದ್ವೀಪಾ ವಸುಂಧರಾ <br>
+        <span class="ENG">kukṣau tu sāgarāḥ sarve saptadvīpā vasundharā<br></span>
 
-        ಋಗ್ವೇದೋ ಥ ಯಜುರ್ವೇದೋ ಸಾಮವೇದೋ ಥ ಅಥರ್ವಣಃ |<br>
-        <span class="ENG">rigvedo tha yajurvedo saamavedo tha atharvanah<br></span>
+        ಋಗ್ವೇದೋ ಥ ಯಜುರ್ವೇದಸ್ಸಾಮವೇದೋ ಹ್ಯಥರ್ವಣಃ <br>
+        <span class="ENG">ṛgvedo'tha yajurvedaḥ sāmavedo hyatharvaṇaḥ<br></span>
 
-        ಅಂಗೈಃ ಸಹಿತಾಃ ಸರ್ವೇ ಕಲಶಾಂಬು ಸಮಾಶ್ರಿತಾಃ |<br>
-        <span class="ENG">angaih sahitaah sarve kalashaambu samaashritah<br></span>
+        ಅಂಗೈಶ್ಚ ಸಹಿತಾಃ ಸರ್ವೇ ಕಲಶಾಂಬು ಸಮಾಶ್ರಿತಾಃ <br>
+        <span class="ENG">aṅgaiśca sahitāḥ sarve kalaśāmbu samāśritāḥ<br></span>
 
-        ಗಂಗೇ ಚ ಯಮುನೇ ಚೈವ ಗೋದಾವರಿ ಸರಸ್ವತೀ |<br>
-        <span class="ENG">gange cha yamune chaiva godaavari sarasvatee<br></span>
+        ಗಂಗೆಚ ಯಮುನೇಚೈವ ಗೋದಾವರಿ ಸರಸ್ವತೀ <br>
+        <span class="ENG">gaṅgeca yamunecaiva godāvari sarasvatī<br></span>
 
-        ನರ್ಮದೇ ಸಿಂಧು ಕಾವೇರಿ ಜಲೇಷ್ಮಿನ್ ಸನ್ನಿಧಿಂ ಕುರು |<br>
-        <span class="ENG">narmade sindhu kaaveri jalesmin sannidhim kuru<br></span><br>
+        ನರ್ಮದಾ ಸಿಂಧು ಕಾವೇರಿ ಜಲೆಸ್ಮಿನ್ ಸನ್ನಿಧಿಂ ಕುರು <br>
+        <span class="ENG">narmadā sindhu kāveri jalesmin sannidhiṁ kuru<br></span><br>
 
-        (Pour kalasham water over us & puja items, while reciting mantra)<br>
+        Pour kalasham water over us & puja items, while reciting mantra<br><br>
 
-        ಪೂಜಾದ್ರವ್ಯಾಣಿ ದೇವಾಃ ಆತ್ಮಾನಂ ಸಂಪ್ರೋಕ್ಷಯೇ ||<br>
-        <span class="ENG">poojaadravyaani devaah aatmaanam samprokshaye ||<br></span>
+        ಪೂಜಾದ್ರವ್ಯಾಣಿ ದೇವಂ ಆತ್ಮಾನಂ ಸಂಪ್ರೋಕ್ಷ್ಯ <br>
+        <span class="ENG">pūjādravyāṇi devaṁ ātmānaṁ samprokṣya<br></span>
     </p>
 
     <h2>ಗಣಪತಿ ಪೂಜೆ<span class="ENG">(Ghanta Naadam)</span></h2>
@@ -139,12 +141,11 @@
         ಶ್ರೀ ಮಹಾಗಣಪತಯೇ ನಮಃ - ನೈವೇದ್ಯಂ ಸಮರ್ಪಯಾಮಿ |<br>
         <span class="ENG">Śrī Mahāgaṇapataye Namaḥ - Naivedyaṃ Samarpayāmi |<br></span><br>
 
-        ಸತ್ಯಾಯ ತ್ವವರೈತತ್ ಪರಿಷಿಚ್ಯಾಮಿ ಅಮೃತಪಸ್ತರಣಂ ನಮಃ ।<br>
-        <span class="ENG">Satyāya tvavaraitat pariṣicyāmi amṛtapastaraṇaṃ namaḥ |<br></span>
+        ಸತ್ಯಂ ತ್ವರ್ಥೇನ ಪರಿಷಂಚಾಮಿ ಅಮೃತಮಸ್ತ್ವಮೃತೋಪಸ್ತರಣಮಸಿ<br>
+        <span class="ENG">satyaṁ tvarthena pariṣañcāmi amṛtamastu amṛtopastaraṇam asi<br></span>
 
-        ಪ್ರಾಣಾಯ ಸ್ವಾಹಾ । ಅಪಾನಾಯ ಸ್ವಾಹಾ । ವ್ಯಾನಾಯ ಸ್ವಾಹಾ । ಉದಾನಾಯ ಸ್ವಾಹಾ । ಸಮಾನಾಯ ಸ್ವಾಹಾ ॥<br>
-        <span class="ENG">Prāṇāya svāhā | Apānāya svāhā | Vyānāya svāhā | Udānāya svāhā | Samānāya svāhā
-            ||<br></span><br>
+        ಪ್ರಾಣಾಯ ಸ್ವಾಹಾ - ಅಪಾನಾಯ ಸ್ವಾಹಾ - ವ್ಯಾನಾಯ ಸ್ವಾಹಾ - ಉದಾನಾಯ ಸ್ವಾಹಾ<br>
+        <span class="ENG">prāṇāya svāhā - apānāya svāhā - vyānāya svāhā - udānāya svāhā<br></span>
 
         ಶ್ರೀ ಮಹಾಗಣಪತಯೇ ನಮಃ - ತಾಂಬೂಲಂ ಸಮರ್ಪಯಾಮಿ |<br>
         <span class="ENG">Śrī Mahāgaṇapataye Namaḥ - Tāmbūlaṃ Samarpayāmi |<br></span>
@@ -155,13 +156,13 @@
         ಶ್ರೀ ಮಹಾಗಣಪತಯೇ ನಮಃ - ಮಂತ್ರಪುಷ್ಪಂ ಸಮರ್ಪಯಾಮಿ, ನಮಸ್ಕಾರಂ ಸಮರ್ಪಯಾಮಿ |<br>
         <span class="ENG">Śrī Mahāgaṇapataye Namaḥ - Mantrapuṣpaṃ Samarpayāmi, Namaskāraṃ Samarpayāmi |<br></span><br>
 
-        ಅನಯಾ ಯಥಾಶಕ್ತಿ ಪೂಜಯಾ ಚ — ಶ್ರೀ ಮಹಾಗಣಪತಿದೇವತಾ ಸುಪ್ರಸನ್ನಾ ಸುಪ್ರೀತಾ ವರದೋ ಭವತು ।<br>
-        <span class="ENG">Anayā yathāśakti pūjayā ca — śrī mahāgaṇapatidevatā suprasannā suprītā varado bhavatu
-            |<br></span>
+        ಅನಯಾ ಯಥಾ ಶಕ್ತ್ಯಾ ಪೂಜಯಾ ಚ - ಶ್ರೀ ಮಹಾಗಣಪತಿಃ ಸುಪ್ರಸನ್ನಃ ಸುಪ್ರೀತಶ್ಚ ವರದೋ ಭವತು<br>
+        <span class="ENG">Anayā yathā śaktyā pūjayā ca - śrī mahāgaṇapatiḥ suprasannaḥ suprītaśca varado bhavatu<br></span><br>
 
-        ಶ್ರೀ ಮಹಾಗಣಪತಿಃ ಪ್ರಸನ್ನೋ ಭವತು । ಶಿರಸಾ ಗೃಹ್ಣಾಮಿ ॥<br>
-        <span class="ENG">Śrī mahāgaṇapatiḥ prasanno bhavatu | śirasā gṛhṇāmi ||</span>
+        ಶ್ರೀ ಮಹಾಗಣಪತಿ ಪ್ರಸಾದಂ ಶಿರಸಾ ಗೃಹ್ಣಾಮಿ<br>
+        <span class="ENG">śrī mahāgaṇapati prasādaṁ śirasā gṛhṇāmi ||</span>
 
+        
     </p>
 
     <h2>ಧ್ಯಾನಂ <span class="ENG">(Dhyaanam)</span></h2>
@@ -185,154 +186,156 @@
 
     <h2>ಆವಾಹನಂ<span class="ENG">(Aavahanam)</span></h2>
     <p>
-        ಸಹಸ್ರದಳ ಪದ್ಮಾಸ್ಯಾಂ, ಸ್ವಸ್ಥಾಂ ಚ ಸುಮನೋಹರಾಂ<br>
-        <span class="ENG">Sahasradala padmaasyaam, svasthaam cha sumanoharaam<br></span>
-        ಶಾಂತಾಂ ಚ ಶ್ರೀಹರೇಃ ಕಾಂತಾಂ ತಾಂ ಭಜೇ ಜಗತಾಂ ಪ್ರಸೂಮ್<br>
-        <span class="ENG">Shaantaam cha Shreehareh kaantaam taam bhaje jagataam prasoomb<br></span>
-        ವರಮಹಾಲಕ್ಷ್ಮೀ ದೇವ್ಯೈ ನಮಃ ಆವಾಹಯಾಮಿ<br>
-        <span class="ENG">Shree Varamahalakshmee devyai namah aavaahayaami<br></span>
+        ಸಹಸ್ರದಳಪದ್ಮಾಸ್ಯಾಂ ಸ್ವಸ್ಥಾಂ ಚ ಸುಮನೋಹರಾಂ<br>
+        <span class="ENG">Sahasradala padmaasyaam swasthaam cha sumanoharaam<br></span>
+        ಶಾಂತಾಂ ಚ ಶ್ರೀಹರೇಃ ಕಾಂತಾಂ ತಾಂ ಭಜೇ ಜಗತಾಂ ಪ್ರಸೂಮ್ |<br>
+        <span class="ENG">Shaantam cha Shrihareh kaantaam taam bhaje jagataam prasoom |<br></span>
+        ಶ್ರೀ ವರಮಹಾಲಕ್ಷ್ಮೀ ದೇವ್ಯೈ ನಮಃ ಆವಾಹಯಾಮಿ ||<br>
+        <span class="ENG">Shri Varamahalakshmi Devyai Namah aavahayami ||<br></span>
         ಸಮಸ್ತ ಉಪಚಾರಾನ್ ಮನಸಾ ಸಮರ್ಪಯಾಮಿ<br>
         <span class="ENG">Samastha upacharaan manasaa samarpayaami<br></span>
     </p>
 
     <h2>ಆಸನಂ<span class="ENG">(Āsana)</span></h2>
     <p>
-        ಅಮೂಲಾ ರಥಯನಸ್ವರಾಂ ಚ ನಿರ್ಮಲತಯಾಂ ವಿಶ್ವಕರಮಣಾ<br>
-        <span class="ENG">Amoolaa rathayanasvarāṁ ca nirmalatayāṁ viśvakarmaṇā<br></span>
-        ಆಸನಾಂ ಚ ಪ್ರಸನ್ನಾಂ ಚ ಮಹಾದೇವಿ ಪ್ರಗೃಹಾತಾಂ<br>
-        <span class="ENG">Āsanāṁ ca prasannāṁ ca Mahādevi pragṛhātām<br></span>
-        ಶ್ರೀ ವರಮಹಾಲಕ್ಷ್ಮೀ ದೇವ್ಯೈ ನಮಃ ನವರತ್ನ ಖಚಿತ ಸಿಂಹಾಸನಂ ಸಮರ್ಪಯಾಮಿ<br>
-        <span class="ENG">Śrī Varamahālakṣmī devyai namaḥ navaratna khacita siṁhāsanaṁ samarpayāmi</span>
+        ಅಮೂಲ್ಯ ರತ್ನಸಾರಂ ಚ ನಿರ್ಮಿತಂ ವಿಶ್ವಕರ್ಮಣಾ |<br>
+        <span class="ENG">Amoolya ratnasaaram cha nirmitam vishvakarmanaa |<br></span>
+        ಆಸನಂ ಚ ಪ್ರಸನ್ನಂ ಚ ಮಹಾದೇವಿ ಪ್ರಗ್ರಹ್ಯತಾಂ |<br>
+        <span class="ENG">Aasanam cha prasannam cha mahaadevi pragrhyataam |<br></span>
+        ಶ್ರೀ ವರಮಹಾಲಕ್ಷ್ಮೀ ದೇವ್ಯೈ ನಮಃ ನವರತ್ನ ಖಚಿತ ಸಿಂಹಾಸನಂ ಸಮರ್ಪಯಾಮಿ ||<br>
+        <span class="ENG">Shri Varamahalakshmi Devyai Namah navaratna khachita simhaasanam samarpayaami ||</span>
     </p>
 
     <h2>ಪಾದ್ಯಂ<span class="ENG">(Pādya)</span></h2>
     <p>
-        ಸುರಾಸುರ ಮಹಾ ಮೌಲೀ ಮಾಲಾ ಮಾಣಿಕ್ಯ ಕಾಂತಿಭಿಃ<br>
-        <span class="ENG">Surāsura mahā maulī mālā māṇikya kāntibhiḥ<br></span>
-        ವಿರಾಜಿತ ಪದದ್ವಾಂದ್ವ ದೇವ ಪಾದೌ ದೇವಿ ದದಾಮ್ಯಹಂ<br>
-        <span class="ENG">Virājita padadvāndva deva pādau devi dadāmyahaṁ<br></span>
-        ಶ್ರೀ ವರಮಹಾಲಕ್ಷ್ಮೀ ದೇವ್ಯೈ ನಮಃ ಪಾದ್ಯಂ ಸಮರ್ಪಯಾಮಿ<br>
-        <span class="ENG">Śrī Varamahālakṣmī devyai namaḥ pādyaṁ samarpayāmi</span>
+        ಸುರಾಸುರ-ಮಹಾ-ಮೌಳಿ ಮಾಲಾ ಮಾಣಿಕ್ಯ-ಕಾಂತಿಭಿಃ<br>
+        <span class="ENG">Suraasura-maha-amouli maalaa maanikya-kaanthibhiḥ<br></span>
+        ವಿರಾಜಿತ-ಪದದ್ವಂದ್ವೇ ಪಾದ್ಯಮ್ ದೇವಿ ದದಾಮ್ಯಹಂ<br>
+        <span class="ENG">Viraajita padadvandve paadyam devi dadaamyaham<br><br></span>
+        ಶ್ರೀ ವರಮಹಾಲಕ್ಷ್ಮೀ ದೇವ್ಯೈ ನಮಃ ಪಾದಯೋಃ ಪಾದ್ಯಮ್ ಸಮರ್ಪಯಾಮಿ<br>
+        <span class="ENG">Shri Varamahalakshmi devyai namah paadayoḥ paadyam samarpayaami</span>
     </p>
 
     <h2>ಅರ್ಘ್ಯಂ<span class="ENG">(Arghya)</span></h2>
     <p>
-        ಪುಷ್ಪಚಂದನ ದುರ್ವಾದಳ ಸಂಯುತಯಾ ಜಾಹ್ನವೀಜಲಂ<br>
-        <span class="ENG">Puṣpacandana durvādala saṁyutayā jāhnavījalaṁ<br></span>
-        ಶಂಖ ಗ್ರಹಸಹಿತ ಶುದ್ಧಂ ಗೃಹಾಣ ಪದ್ಮವಾಸಿನಿ<br>
-        <span class="ENG">Śaṁkha grahasahita śuddhaṁ gṛhāṇa padmavāsini<br></span>
-        ಶ್ರೀ ವರಮಹಾಲಕ್ಷ್ಮೀ ದೇವ್ಯೈ ನಮಃ ಅರ್ಘ್ಯಂ ಸಮರ್ಪಯಾಮಿ<br>
-        <span class="ENG">Śrī Varamahālakṣmī devyai namaḥ arghyaṁ samarpayāmi</span>
+        ಪುಷ್ಪ-ಚಂದನ-ದೂರ್ವಾದಿ ಸಂಯುತಂ ಜಾಹ್ನವೀ-ಜಲಂ<br>
+        <span class="ENG">Pushpa-chandana-durvaadi samyutam Jaahnavi jalam<br></span>
+        ಶಂಖ-ಗರ್ಭ-ಸ್ಥಿತಂ ಶುದ್ಧಂ ಗೃಹ್ಯತಾಂ ಪದ್ಮವಾಸಿನೀಂ<br>
+        <span class="ENG">Shankha-garbha-sthitam shuddham grihyataam Padmavaasineem<br></span>
+        ಶ್ರೀ ವರಮಹಾಲಕ್ಷ್ಮೀ ದೇವ್ಯೈ ನಮಃ ಹಸ್ತಯೋಃ ಅರ್ಘ್ಯಂ ಸಮರ್ಪಯಾಮಿ<br>
+        <span class="ENG">Shri Varamahalakshmi devyai namah hastayoḥ arghyam samarpayaami</span>
     </p>
 
     <h2>ಆಚಮನೀಯಂ<span class="ENG">(Ācamaniya)</span></h2>
     <p>
-        ಪುನೀತಿರೋದಕಂ ಚೈವ ವಿಶುದ್ಧಂ ಶುದ್ಧತಾಮಸದಾ<br>
-        <span class="ENG">Punītirōdakaṁ caiva viśuddhaṁ śuddhatāmasadā<br></span>
-        ಗೃಹಾಣ ಕೃಷ್ಣಕಾಂತೇ ಚ ರಮಾಮಾಚಮನೀಯಕಂ<br>
-        <span class="ENG">Gṛhāṇa kṛṣṇakānte ca Ramāmācamaniyakaṁ<br></span>
+        ಪುಣ್ಯತೀರ್ಥೋದಕಂ ಚೈವ ವಿಶುದ್ಧಂ ಶುದ್ಧಿದಂ ಸದಾ<br>
+        <span class="ENG">Punyatirthodakam chaiva vishuddham shuddhidam sadaa<br></span>
+        ಗೃಹ್ಯತಾಂ ಕೃಷ್ಣಕಾಂತೇ ಚ ರಮ್ಯಮಾಚಮನೀಯಕಮ್<br>
+        <span class="ENG">Grihyataam Krishnakante cha ramyama-achama-niyakam<br></span>
         ಶ್ರೀ ವರಮಹಾಲಕ್ಷ್ಮೀ ದೇವ್ಯೈ ನಮಃ ಆಚಮನೀಯಂ ಸಮರ್ಪಯಾಮಿ<br>
-        <span class="ENG">Śrī Varamahālakṣmī devyai namaḥ ācamanīyaṁ samarpyāmi</span>
+        <span class="ENG">Shri Varamahalakshmi devyai namah aachamaniyam samarpayaami</span>
     </p>
 
     <h2>ಸ್ನಾನಂ<span class="ENG">(Snāna)</span></h2>
     <p>
-        ಸುಗಂಧ ವಿಷ್ಣುತೈಲಂ ಚ ಸುಗಂಧ್ಯಮಲಕೋಜ್ಜ್ವಲಂ<br>
-        <span class="ENG">Sugandha viṣṇutailaṁ ca sugandhyamalakojjvalaṁ<br></span>
-        ದೇಹ ಸೌಂದರ್ಯ ಬೀಜಂ ಚ ಗೃಹಾಣ ಶ್ರೀ ಹರಿಪ್ರಿಯೇ<br>
-        <span class="ENG">Deha saundarya bījaṁ ca gṛhāṇa Śrī Haripriye<br></span>
+        ಸುಗಂಧಿ ವಿಷ್ಣು ತೈಲಂಚ ಸುಗಂಧಾಮಲಕೋಜ್ವಲಂ<br>
+        <span class="ENG">Sugandhi Vishnu tailam cha sugandhaamalakojvalam<br></span>
+        ದೇಹ-ಸೌಂದರ್ಯ-ಬೀಜಂಚ ಗೃಹ್ಯತಾಂ ಶ್ರೀ ಹರಿಪ್ರಿಯೇ<br>
+        <span class="ENG">Deha-saundarya-beejam cha grihyataam Shri Haripriye<br></span>
         ಶ್ರೀ ವರಮಹಾಲಕ್ಷ್ಮೀ ದೇವ್ಯೈ ನಮಃ ಶುದ್ಧೋದಕ ಸ್ನಾನಂ ಸಮರ್ಪಯಾಮಿ<br>
-        <span class="ENG">Śrī Varamahālakṣmī devyai namaḥ śuddhodaka snānaṁ samarpyāmi<br></span>
+        <span class="ENG">Shri Varamahalakshmi devyai namah shuddhodaka snaanam samarpayaami<br></span>
         ಸ್ನಾನಾನಂತರಂ ಆಚಮನೀಯಂ ಸಮರ್ಪಯಾಮಿ<br>
-        <span class="ENG">Snānānantaraṁ ācamanīyaṁ samarpyāmi</span>
+        <span class="ENG">Snaanaanantaram aachamaniyam samarpayaami</span>
     </p>
 
     <h2>ವಸ್ತ್ರಂ<span class="ENG">(Vastra)</span></h2>
     <p>
-        ಪೀತಾಂಬರ ಧರೆ ದೇವಿ ಪೀತಾಂಬರ ಸಹೋದರಿ<br>
-        <span class="ENG">Pītāmbara dhare devi pītāmbara sahodari<br></span>
-        ಪೀತಾಂಬರಂ ಪ್ರಯಚ್ಛಾಮಿ ವಿದ್ಯಾತಾಂ ಜಟಾಧರೆ<br>
-        <span class="ENG">Pītāmbaraṁ prayacchāmi vidyātāṁ jaṭādhare<br></span>
-        ಶ್ರೀ ವರಮಹಾಲಕ್ಷ್ಮೀ ದೇವ್ಯೈ ನಮಃ ವಸ್ತ್ರಯುಗ್ಮಂ ಸಮರ್ಪಯಾಮಿ<br>
-        <span class="ENG">Śrī Varamahālakṣmī devyai namaḥ vastrayugmaṁ samarpyāmi<br></span>
-        ವಸ್ತ್ರಯುಗ್ಮ ಧಾರಣಾನಂತರಂ ಆಚಮನೀಯಂ ಸಮರ್ಪಯಾಮಿ<br>
-        <span class="ENG">Vastrayugma dhāraṇānantaraṁ ācamanīyaṁ samarpyāmi</span>
+        ಪೀತಾಂಬರ ಧರೆ ದೇವೀ ಪೀತಾಂಬರ ಸಹೋದರಿ<br>
+        <span class="ENG">Pitamabara dhare devi pitambara sahodari<br></span>
+        ಪೀತಾಂಬರಂ ಪ್ರಯಚ್ಛಾಮಿ ವಿದ್ಯುತ್ ಅಂಗ ಜಟಾಧರೆ<br>
+        <span class="ENG">Pitambaram prayachchhami vidyut anga jatadhare<br></span>
+        ವರಮಹಾಲಕ್ಷ್ಮೀ ದೇವ್ಯೇ ನಮಃ ವಸ್ತ್ರಯುಗ್ಮಂ ಸಮರ್ಪಯಾಮಿ<br>
+        <span class="ENG">hri varamahalakshmi devye namah vastrayugmam samarpayami<br></span><br>
+
+        ವಸ್ತ್ರಯುಗ್ಮ ಧಾರಣಾ-ನಂತರಂ ಆಚಮನೀಯಂ ಸಮರ್ಪಯಾಮಿ<br>
+        <span class="ENG">Vastrayugma dharanaa-nantaram aachamaniyam samarpayami</span>
     </p>
 
     <h2>ಯಜ್ಞೋಪವೀತಂ<span class="ENG">(Yajñopavīta)</span></h2>
     <p>
-        ಶತಬ್ರಹ್ಮಾತ್ಮಕೇ ದೇವಿ ಶತಶಸ್ತ್ರ ಕೃತಾಲಯೇ<br>
-        <span class="ENG">Śatabrahmātmake devi śataśastra kṛtālaye<br></span>
-        ಸೌವರ್ಣ ಯಜ್ಞ ಸೂತ್ರಾಂತೇ ದದಾಮಿ ಪರಮೇಶ್ವರಿ<br>
-        <span class="ENG">Sauvarṇa yajña sūtrānte dadāmi Parameśvari<br></span>
+        ಶಬ್ದ ಬ್ರಹ್ಮಾತ್ಮಿಕೇ ದೇವೀ ಶಬ್ದ ಶಾಸ್ತ್ರ ಕೃತಾಲಯೇ<br>
+        <span class="ENG">Shabda brahmātmike devi shabda shastra krutālayae<br></span>
+        ಸೌವರ್ಣಂ ಯಜ್ಞ ಸೂತ್ರಂತೇ, ದದಾಮಿ ಪರಮೇಶ್ವರಿ<br>
+        <span class="ENG">Sauvaranam yajna sutramtae, dadami paramesvari<br></span>
         ಶ್ರೀ ವರಮಹಾಲಕ್ಷ್ಮೀ ದೇವ್ಯೈ ನಮಃ ಯಜ್ಞೋಪವೀತಂ ಸಮರ್ಪಯಾಮಿ<br>
-        <span class="ENG">Śrī Varamahālakṣmī devyai namaḥ yajñopavītaṁ samarpyāmi</span>
+        <span class="ENG">Shri varamahalakshmi devyai namah yajñopavītam samarpayami</span>
     </p>
 
     <h2>ಗಂಧಂ<span class="ENG">(Gandha)</span></h2>
     <p>
         ಕಸ್ತೂರಿ ಕಂಕಣೈರ್ಯುಕ್ತಂ ಗಂಧಸ್ವರ ವಿಪುಲಂ ಶುಭಂ<br>
-        <span class="ENG">Kastūrī kaṅkaṇairyuktaṁ gandhasvara vipulaṁ śubhaṁ<br></span>
-        ಮಲಯಾಚಲ ಸಂಪತ್ತಂ ಚಂದನಂ ಪ್ರತಿಗೃಹ್ಯತಾಂ<br>
-        <span class="ENG">Malayācala sampattaṁ candanaṁ pratigṛhyatāṁ<br></span>
-        ಶ್ರೀ ವರಮಹಾಲಕ್ಷ್ಮೀ ದೇವ್ಯೈ ನಮಃ ಗಂಧಂ ಧಾರಯಾಮಿ<br>
-        <span class="ENG">Śrī Varamahālakṣmī devyai namaḥ gandhaṁ dhārayāmi<br></span>
-        ಹರಿದ್ರಾ ಕಂಕಣಾದಿ ಸುಗಂಧ ದ್ರವ್ಯಾಣಿ ಸಮರ್ಪಯಾಮಿ<br>
-        <span class="ENG">Haridrā kaṅkaṇādi sugandha dravyāṇi samarpyāmi</span>
+        ಕಸ್ತೂರೀ-ಕುಂಕುಮೈಃ ಯುಕ್ತಂ ಘನಸಾರ-ವಿಮಿಶ್ರಿತಂ<br>
+        <span class="ENG">Kasturi-kumkumaih yuktam ghana-saara-vimishritam<br></span>
+        ಮಲಯಾಚಲ-ಸಂಭೂತಂ ಚಂದನಂ ಪ್ರತಿಗೃಹ್ಯತಾಂ<br>
+        <span class="ENG">Malayaachala-sambhootam chandanam pratigrihyataam<br></span>
+        ಶ್ರೀ ವರಮಹಾಲಕ್ಷ್ಮೀ ದೇವ್ಯೈ ನಮಃ ಶ್ರೀಗಂಧಾನ್ ಧಾರಯಾಮಿ<br>
+        <span class="ENG">Shri Varamahalakshmi devyai namah shree-gandhaan dhaarayami<br></span>
+        ಹರಿದ್ರಾ-ಕುಂಕುಮಾದಿ ಸುಗಂಧ ದ್ರವ್ಯಾಣಿ ಸಮರ್ಪಯಾಮಿ<br>
+        <span class="ENG">Haridraa-kunkumaadi sugandha dravyaani samarpayaami</span>
     </p>
 
     <h2>ಪುಷ್ಪಂ<span class="ENG">(Pushpa)</span></h2>
     <p>
-        ತುಳಸಿ ವನಸಂಭೂತಾಂ ನಾನಾ ಗುಣ ಮನೋಹರಾಂ<br>
-        <span class="ENG">Tulasi vanasambhūtāṁ nānā guṇa manoharāṁ<br></span>
-        ಆನಂದ ಸೌರಭ ಯುಕ್ತಾಂ ಪುಷ್ಪಾಂ ಪ್ರತಿಗೃಹ್ಯತಾಂ<br>
-        <span class="ENG">Ānanda saurabha yuktāṁ puṣpāṁ pratigṛhyatāṁ<br></span>
+        ತುರೀಯ-ವನ-ಸಂಭೂತಂ ನಾನಾಗುಣಮನೋಹರಂ<br>
+        <span class="ENG">Turiyavana-sambhootam naanaaguna-manoharam<br></span>
+        ಆನಂದ-ಸೌರಭಂ ಪುಷ್ಪಂ ಗೃಹ್ಯತಾಮಿದಮುತ್ತಮಂ<br>
+        <span class="ENG">Aananda-saurabham pushpam grihyataam-idam-uttamam<br></span>
         ಶ್ರೀ ವರಮಹಾಲಕ್ಷ್ಮೀ ದೇವ್ಯೈ ನಮಃ ಪುಷ್ಪಾಣಿ ಸಮರ್ಪಯಾಮಿ<br>
-        <span class="ENG">Śrī Varamahālakṣmī devyai namaḥ puṣpāṇi samarpyāmi</span>
+        <span class="ENG">Shri Varamahalakshmi devyai namah pushpaani samarpayaami</span>
     </p>
 
     <h2>ಆಭರಣಂ<span class="ENG">(Ābharaṇa)</span></h2>
     <p>
-        ರಥನಸೌವರ್ಣವಿಕ್ರಾಂ ದೇಹಾಲಂಕಾರವರ್ಧನಾಂ<br>
-        <span class="ENG">Rathana sauvarṇavikrāṁ dehālaṅkāravardhanāṁ<br></span>
-        ಶೋಭಾದಾಂ ಶ್ರೀಕರಾಂ ಚ ಭೂಷಣಾಂ ಪ್ರತಿಗೃಹ್ಯತಾಂ<br>
-        <span class="ENG">Śobhādāṁ śrīkarāṁ ca bhūṣaṇāṁ pratigṛhyatāṁ<br></span>
+        ರತ್ನ-ಸುವರ್ಣ-ವಿಕಾರಂ ಚ ದೇಹಾ-ಲಂಕಾರ-ವರ್ಧನಂ<br>
+        <span class="ENG">Ratna-suvarna-vikaaram cha deha-alankaara-vardhanam<br></span>
+        ಶೋಭಾ-ದಾನಂ ಶ್ರೀಕರಂ ಚ ಭೂಷಣಂ ಪ್ರತಿಗೃಹ್ಯತಾಂ<br>
+        <span class="ENG">Shobha-daanaṁ shreekaram cha bhooshanam pratigrihyataam<br></span>
         ಶ್ರೀ ವರಮಹಾಲಕ್ಷ್ಮೀ ದೇವ್ಯೈ ನಮಃ ಆಭರಣಾನಿ ಸಮರ್ಪಯಾಮಿ<br>
-        <span class="ENG">Śrī Varamahālakṣmī devyai namaḥ ābharaṇāni samarpyāmi</span>
+        <span class="ENG">Shri Varamahalakshmi devyai namah aabharanani samarpayaami</span>
     </p>
 
     <h2>ಅಂಗಪೂಜಾ<span class="ENG">(Anga Pooja)</span></h2>
     <p>
-        ೧. ಚಾಂಚಲಾಯೈ ನಮಃ – ಪಾದೌ ಪೂಜಯಾಮಿ<br>
-        <span class="ENG">Chaanchalaayai namah – Paadau poojayaami<br></span>
-        ೨. ಚಪಲಾಯೈ ನಮಃ – ಜಾನುನಿ ಪೂಜಯಾಮಿ<br>
-        <span class="ENG">Chapalaayai namah – Jaanuni poojayaami<br></span>
-        ೩. ಪೀತಾಂಬರ ಧರಾಯೈ ನಮಃ – ಊರು ಪೂಜಯಾಮಿ<br>
-        <span class="ENG">Peetaambara dharaayai namah – Ooru poojayaami<br></span>
-        ೪. ಕಮಲವಾಸಿನ್ಯೈ ನಮಃ – ಕಟಿಂ ಪೂಜಯಾಮಿ<br>
-        <span class="ENG">Kamalavaasinyai namah – Katim poojayaami<br></span>
-        ೫. ಪದ್ಮಾಲಯಾಯೈ ನಮಃ – ನಾಭಿಂ ಪೂಜಯಾಮಿ<br>
-        <span class="ENG">Padmaalayaayai namah – Naabhim poojayaami<br></span>
-        ೬. ಮದನಮಾತ್ರೇ ನಮಃ – ಸ್ತನೌ ಪೂಜಯಾಮಿ<br>
-        <span class="ENG">Madanamaatre namah – Stanau poojayaami<br></span>
-        ೭. ಲಲಿತಾಯೈ ನಮಃ – ಭುಜಯುಗ್ಮೌ ಪೂಜಯಾಮಿ<br>
-        <span class="ENG">Lalitaayai namah – Bhujayugmau poojayaami<br></span>
-        ೮. ಕಾಂಬುಕಂಠಾಯೈ ನಮಃ – ಕಂಠಂ ಪೂಜಯಾಮಿ<br>
-        <span class="ENG">Kaambukanthaayai namah – Kantham poojayaami<br></span>
-        ೯. ಸುಮುಖಾಯೈ ನಮಃ – ಮುಖಂ ಪೂಜಯಾಮಿ<br>
-        <span class="ENG">Sumukhaayai namah – Mukham poojayaami<br></span>
-        ೧೦. ಶ್ರಿಯೈ ನಮಃ – ಓಷ್ಟೌ ಪೂಜಯಾಮಿ<br>
-        <span class="ENG">Shriyai namah – Oshtau poojayaami<br></span>
-        ೧೧. ಸುನಾಸಿಕಾಯೈ ನಮಃ – ನಾಸಿಕಾಂ ಪೂಜಯಾಮಿ<br>
-        <span class="ENG">Sunaasikaayai namah – Naasikaam poojayaami<br></span>
-        ೧೨. ಸುನೇತ್ರಾಯೈ ನಮಃ – ನೇತ್ರೇ ಪೂಜಯಾಮಿ<br>
-        <span class="ENG">Sunetraayai namah – Netre poojayaami<br></span>
-        ೧೩. ರಮಾಯೈ ನಮಃ – ಕರ್ಣೌ ಪೂಜಯಾಮಿ<br>
-        <span class="ENG">Ramaayai namah – Karnau poojayaami<br></span>
-        ೧೪. ಕಮಲಾಯೈ ನಮಃ – ಶಿರಃ ಪೂಜಯಾಮಿ<br>
-        <span class="ENG">Kamalaayai namah – Shirah poojayaami<br></span>
-        ೧೫. ಶ್ರೀ ಮಹಾಲಕ್ಷ್ಮೀ ದೇವ್ಯೈ ನಮಃ – ಸರ್ವಾಂಗಾನಿ ಪೂಜಯಾಮಿ<br>
-        <span class="ENG">Shree Mahalakshmee devyai namah – Sarvaangaani poojayaami</span>
+        ೧. ಚಾಂಚಲಾಯೈ ನಮಃ - ಪಾದೌ ಪೂಜಯಾಮಿ<br>
+        <span class="ENG">Chaanchalaayai namah - Paadau poojayaami<br></span>
+        ೨. ಚಪಲಾಯೈ ನಮಃ - ಜಾನುನಿ ಪೂಜಯಾಮಿ<br>
+        <span class="ENG">Chapalaayai namah - Jaanuni poojayaami<br></span>
+        ೩. ಪೀತಾಂಬರ ಧರಾಯೈ ನಮಃ - ಊರು ಪೂಜಯಾಮಿ<br>
+        <span class="ENG">Peetaambara dharaayai namah - Ooru poojayaami<br></span>
+        ೪. ಕಮಲವಾಸಿನ್ಯೈ ನಮಃ - ಕಟಿಂ ಪೂಜಯಾಮಿ<br>
+        <span class="ENG">Kamalavaasinyai namah - Katim poojayaami<br></span>
+        ೫. ಪದ್ಮಾಲಯಾಯೈ ನಮಃ - ನಾಭಿಂ ಪೂಜಯಾಮಿ<br>
+        <span class="ENG">Padmaalayaayai namah - Naabhim poojayaami<br></span>
+        ೬. ಮದನಮಾತ್ರೇ ನಮಃ - ಸ್ತನೌ ಪೂಜಯಾಮಿ<br>
+        <span class="ENG">Madanamaatre namah - Stanau poojayaami<br></span>
+        ೭. ಲಲಿತಾಯೈ ನಮಃ - ಭುಜಯುಗ್ಮೌ ಪೂಜಯಾಮಿ<br>
+        <span class="ENG">Lalitaayai namah - Bhujayugmau poojayaami<br></span>
+        ೮. ಕಾಂಬುಕಂಠಾಯೈ ನಮಃ - ಕಂಠಂ ಪೂಜಯಾಮಿ<br>
+        <span class="ENG">Kaambukanthaayai namah - Kantham poojayaami<br></span>
+        ೯. ಸುಮುಖಾಯೈ ನಮಃ - ಮುಖಂ ಪೂಜಯಾಮಿ<br>
+        <span class="ENG">Sumukhaayai namah - Mukham poojayaami<br></span>
+        ೧೦. ಶ್ರಿಯೈ ನಮಃ - ಓಷ್ಟೌ ಪೂಜಯಾಮಿ<br>
+        <span class="ENG">Shriyai namah - Oshtau poojayaami<br></span>
+        ೧೧. ಸುನಾಸಿಕಾಯೈ ನಮಃ - ನಾಸಿಕಾಂ ಪೂಜಯಾಮಿ<br>
+        <span class="ENG">Sunaasikaayai namah - Naasikaam poojayaami<br></span>
+        ೧೨. ಸುನೇತ್ರಾಯೈ ನಮಃ - ನೇತ್ರೇ ಪೂಜಯಾಮಿ<br>
+        <span class="ENG">Sunetraayai namah - Netre poojayaami<br></span>
+        ೧೩. ರಮಾಯೈ ನಮಃ - ಕರ್ಣೌ ಪೂಜಯಾಮಿ<br>
+        <span class="ENG">Ramaayai namah - Karnau poojayaami<br></span>
+        ೧೪. ಕಮಲಾಯೈ ನಮಃ - ಶಿರಃ ಪೂಜಯಾಮಿ<br>
+        <span class="ENG">Kamalaayai namah - Shirah poojayaami<br></span>
+        ೧೫. ಶ್ರೀ ಮಹಾಲಕ್ಷ್ಮೀ ದೇವ್ಯೈ ನಮಃ - ಸರ್ವಾಂಗಾನಿ ಪೂಜಯಾಮಿ<br>
+        <span class="ENG">Shree Mahalakshmee devyai namah - Sarvaangaani poojayaami</span>
     </p>
 
 
@@ -521,7 +524,7 @@
     <h2>ವಾಯನ ದಾನಂ (vaayana dhaanam)</h2>
     <p>
         Chant this mantra and give vaayanam<br><br>
-        
+
         ಇಂದಿರಾ ಪ್ರತಿಗೃಹ್ಣಾತು ಇಂದಿರಾವೈ ದದಾತಿಚ<br>
         <span class="ENG">Indirā pratigṛhṇātu indirāvai dadātica<br></span>
 
